[gd_scene load_steps=4 format=3 uid="uid://bjh16m6h6uqx"]

[ext_resource type="Script" path="res://scripts/PlayerScript_Movement.gd" id="1_uebib"]
[ext_resource type="AudioStream" uid="uid://drebsyeelblwn" path="res://sounds/concrete1.wav" id="2_er7kv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rafyu"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_uebib")

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_rafyu")

[node name="ViewYAxis" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, -0.1)

[node name="EyesPlayer" type="Camera3D" parent="ViewYAxis"]

[node name="FlashLight" type="SpotLight3D" parent="ViewYAxis/EyesPlayer"]
visible = false
light_energy = 4.0
spot_range = 19.0
spot_angle = 45.9413

[node name="footsteps" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_er7kv")

[node name="Crouch" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, 1, 0)

[node name="Player" type="Area3D" parent="."]

[node name="Collision" type="CollisionShape3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_rafyu")

[connection signal="area_entered" from="Player" to="." method="_on_player_area_entered"]
